infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: tix.dev
      http: 
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend: 
              service:
                name: auth-srv
                port:
                  number: 5000
          - path: /api/movie/?(.*)
            pathType: Prefix
            backend: 
              service:
                name: movie-srv
                port:
                  number: 5000
          - path: /api/admin/?(.*)
            pathType: Prefix
            backend: 
              service:
                name: admin-srv
                port:
                  number: 5000
